--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -69,7 +69,7 @@ main{
   align-content: center;
 }
 
-@media screen and (max-width: 1999px ) {
+@media screen and (max-width: 750px ) {
   main {
     padding: 2rem;
     max-width: 100vw;
